removed <br> from teacher<br>training

--- a/_data/main-nav.yml
+++ b/_data/main-nav.yml
@@ -2,7 +2,7 @@
   link: /steve-avian/
 - name: In the Media
   link: /shamayoga-in-the-media/
-- name: Teacher<br/> Training
+- name: Teacher Training
   link: /teacher-training/
   submenu:
     - subname: Course Content
