--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -1,15 +1,15 @@
 - student: Ali
   testimony: >-
     Dear Steve, what an amazing year! Thank you sooooo much for your energy and
-    nurturing Ommmm.  Ali
+    nurturing Ommmm.
 - student: Lisa
   testimony: >-
     Steve, you're such an inspiration. I hope our paths will meet again. Thank
-    you so much. Lisa
+    you so much.
 - student: Konny
   testimony: >-
     Thank you for your support and inspiration and motivation. The journey for
-    me has just begun. Konny
+    me has just begun.
 - student: Paula
   testimony: >-
     Thank you so much. I have learned so much about myself. You have put me on
@@ -17,21 +17,17 @@
 - student: India
   testimony: >-
     It's been wonderful joining each other on our yoga journeys. Thank you.
-    Namaste. India
+    Namaste.
 - student: Gail
   testimony: >-
     Thank you so much Steve. I have learnt so much wisdom from you. You are an
-    inspiration. Bless you. Gail
+    inspiration. Bless you.
 - student: Laura
-  testimony: >-
-    Dearest Steveananda, Thank you sooo much. I've had a wonderful journey.
-    Laura
+  testimony: 'Dearest Steveananda, Thank you sooo much. I''ve had a wonderful journey.'
 - student: kayte
-  testimony: >-
-    Hope we get a chance to do some collaboration in yoga. &nbsp;You're awesome!
-    Kayte
+  testimony: Hope we get a chance to do some collaboration in yoga. &nbsp;You're awesome!
 - student: Molly
-  testimony: 'Steve, Thank you so much. It''s been a wonderful year. Molly'
+  testimony: 'Steve, Thank you so much. It''s been a wonderful year.'
 - student: Roberta (Sutherland)
   testimony: >-
     I have thoroughly enjoyed Steve's Yoga Teacher Training. It covered all
