Updated '_data/testimonials.yml' via CloudCannon

--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -1,36 +1,38 @@
 - student: Ali
   testimony: >-
-    Dear Steve, what an amazing year! Thank you sooooo much for your energy and
-    nurturing Ommmm.
+    "Dear Steve, what an amazing year! Thank you sooooo much for your energy and
+    nurturing Ommmm."
 - student: Lisa
   testimony: >-
-    Steve, you're such an inspiration. I hope our paths will meet again. Thank
-    you so much.
+    "Steve, you're such an inspiration. I hope our paths will meet again. Thank
+    you so much."
 - student: Konny
   testimony: >-
-    Thank you for your support and inspiration and motivation. The journey for
-    me has just begun.
+    "Thank you for your support and inspiration and motivation. The journey for
+    me has just begun."
 - student: Paula
   testimony: >-
-    Thank you so much. I have learned so much about myself. You have put me on
-    the right path.
+    "Thank you so much. I have learned so much about myself. You have put me on
+    the right path."
 - student: India
   testimony: >-
-    It's been wonderful joining each other on our yoga journeys. Thank you.
-    Namaste.
+    "It's been wonderful joining each other on our yoga journeys. Thank you.
+    Namaste."
 - student: Gail
   testimony: >-
-    Thank you so much Steve. I have learnt so much wisdom from you. You are an
-    inspiration. Bless you.
+    "Thank you so much Steve. I have learnt so much wisdom from you. You are an
+    inspiration. Bless you."
 - student: Laura
-  testimony: 'Dearest Steveananda, Thank you sooo much. I''ve had a wonderful journey.'
+  testimony: '"Dearest Steveananda, Thank you sooo much. I''ve had a wonderful journey."'
 - student: kayte
-  testimony: Hope we get a chance to do some collaboration in yoga. &nbsp;You're awesome!
+  testimony: >-
+    "Hope we get a chance to do some collaboration in yoga. &nbsp;You're
+    awesome!"
 - student: Molly
-  testimony: 'Steve, Thank you so much. It''s been a wonderful year.'
+  testimony: '"Steve, Thank you so much. It''s been a wonderful year."'
 - student: Roberta (Sutherland)
   testimony: >-
-    I have thoroughly enjoyed Steve's Yoga Teacher Training. It covered all
+    "I have thoroughly enjoyed Steve's Yoga Teacher Training. It covered all
     aspects of yoga, from the more physical asanas to meditation and relaxation
     techniques, as well as working with energy, and the broader aspects of the
     philosophy of yoga. <br />Basically it gave me the opportunity to approach
@@ -45,7 +47,7 @@
     classes, where I met lovely people who I am now friends with. <br />I would
     recommend Steve's Yoga Teacher Training to anyone who wants to become a yoga
     teacher , and also to anyone who wants to experience yoga from a deeper
-    point of view than that of a normal yoga class.<br />Roberta
+    point of view than that of a normal yoga class.<br />Roberta"
 - student: Jo (Boltt)
   testimony: >-
     "A comprehensive and professional course that has managed to capture a real
