--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Shamayoga - Learn to inspire. Learn to teach Yoga.
 email: shamayoga9gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Shamayoga at the crossroads of the physical and the spiritual
-baseurl: "http://salmon-shovel.cloudvent.net" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://salmon-shovel.cloudvent.net" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: shamayoga
 github_username:  shamayoga
 
