Updated '_data/main-nav.yml' via CloudCannon

--- a/_data/main-nav.yml
+++ b/_data/main-nav.yml
@@ -21,14 +21,14 @@
       sublink: /teacher-training/venues/
     - subname: Course Application
       sublink: /teacher-training/course-application/
-- name: Classes
-  link: /classes/
+- name: Yoga Classes
+  link: /yoga-classes/
 - name: Yoga Workshops
   link: /yoga-workshops/
 - name: Yoga Retreats
   link: /yoga-retreats/
-- name: Shop
-  link: /shop/
+- name: Yoga Shop
+  link: /yoga-shop/
 - name: Yoga Gallery
   link: /yoga-gallery/
 - name: Philosophy of Yoga
