--- a/_data/main-nav.yml
+++ b/_data/main-nav.yml
@@ -3,39 +3,39 @@
 - name: Everything Yoga
   link: /everything-yoga/
   submenu:
-    - subname: Yoga Classes
+    - subname: Classes
       sublink: /everything-yoga/yoga-classes/
-    - subname: Yoga Workshops
+    - subname: Gallery
+      sublink: /everything-yoga/yoga-gallery/  
+    - subname: Workshops
       sublink: /everything-yoga/yoga-workshops/
-    - subname: Yoga Retreats
+    - subname: Retreats
       sublink: /everything-yoga/yoga-retreats/
-    - subname: Yoga Shop
+    - subname: Shop
       sublink: /everything-yoga/yoga-shop/
-    - subname: Yoga Gallery
-      sublink: /everything-yoga/yoga-gallery/
-    - subname: Yoga Philosophy
+    - subname: Philosophy
       sublink: /everything-yoga/philosophy-of-yoga/
-    - subname: Yoga Resources
+    - subname: Useful Resources
       sublink: /everything-yoga/yoga-resources/
 - name: Teacher Training
   link: /teacher-training/
   submenu:
     - subname: Course Content
       sublink: /teacher-training/course-content/
-    - subname: The Tutors
-      sublink: /teacher-training/the-tutors/
     - subname: Accredititation
       sublink: /teacher-training/accredititation/
+    - subname: The Tutors
+      sublink: /teacher-training/the-tutors/
     - subname: Prerequisites
       sublink: /teacher-training/prerequisites/
     - subname: Testimonials
       sublink: /teacher-training/testimonials/
-    - subname: Course Fees
-      sublink: /teacher-training/course-fees/
     - subname: Venues
       sublink: /teacher-training/venues/
-    - subname: Course Application
-      sublink: /teacher-training/course-application/
+    - subname: Fees &amp; Application
+      sublink: /teacher-training/course-fees-and-application/
+    - xsubname: Course Application
+      xsublink: /teacher-training/course-application/
 - name: Contact Shamayoga
   link: /contact-shamayoga/
 - name: In the Media
