--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: shamayoga9gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Shamayoga at the crossroads of the physical and the spiritual
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://salmon-shovel.cloudvent.net" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://shamayoga.github.io/www-shamayoga" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: shamayoga
 github_username:  shamayoga
 
