Bring Out the Yoga in You menu

--- a/_data/main-nav.yml
+++ b/_data/main-nav.yml
@@ -1,6 +1,6 @@
 - name: Steve Avian
   link: /steve-avian/
-- name: Everything Yoga
+- name: Bring Out The Yoga in You
   link: /everything-yoga/
   submenu:
     - subname: Classes
