--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: shamayoga9gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Shamayoga at the crossroads of the physical and the spiritual
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://eloquent-shirley-b51e43.netlify.com" #"https://brave-poitras-ad569a.netlify.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://brave-poitras-ad569a.netlify.com" # "https://eloquent-shirley-b51e43.netlify.com" #the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: shamayoga
 github_username:  shamayoga
 
