everything yoga link directly to classes

--- a/_data/main-nav.yml
+++ b/_data/main-nav.yml
@@ -20,7 +20,7 @@
     - xsubname: Course Application
       xsublink: /teacher-training/course-application/
 - name: Bring Out The Yoga in You
-  link: /everything-yoga/
+  link: /everything-yoga/yoga-classes/
   submenu:
     - subname: Classes
       sublink: /everything-yoga/yoga-classes/
