Updated '_data/main-nav.yml' via CloudCannon

--- a/_data/main-nav.yml
+++ b/_data/main-nav.yml
@@ -49,7 +49,7 @@
       sublink: /shamayoga-in-the-media/events/
     - subname: Yogaseer (Blog)
       sublink: 'https://www.yogaseer.com/'
+- name: Royalty Free Music
+  link: /everything-yoga/yoga-shop/
 - name: Contact Shamayoga
   link: /contact-shamayoga/
-- name: <i class="fa fa-search"></i>
-  link: /search
