Updated '_data/main-nav.yml' via CloudCannon

--- a/_data/main-nav.yml
+++ b/_data/main-nav.yml
@@ -1,6 +1,6 @@
 - name: Steve Avian
   link: /steve-avian/
-- name: Teacher Training
+- name: Yoga Teacher Training
   link: /teacher-training/
   submenu:
     - subname: Course Content
