Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ plugins:
 _options:
   content:
     styles: /css/editor.css
+_options:
   _block:
     left: align-left
     center: center-this-text
