Updated '_data/testimonials.yml' via CloudCannon

--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -1,7 +1,9 @@
 - student: Ali
   testimony: >-
     "Dear Steve, what an amazing year! Thank you sooooo much for your energy and
-    nurturing Ommmm."
+    nurturing Ommmm." <img
+    src="https://lh3.googleusercontent.com/-tdn20241ZYg/U2vbANMoPNI/AAAAAAAAAHI/o3awTFQE-to/s235/meditation_6.jpg"
+    class="polaroid-left"/>
 - student: Lisa
   testimony: >-
     "Steve, you're such an inspiration. I hope our paths will meet again. Thank
