--- a/_data/main-nav.yml
+++ b/_data/main-nav.yml
@@ -42,7 +42,7 @@
     - subname: Shamayoga Instagram
       sublink: 'https://www.instagram.com/Shamayoga9/'
     - subname: Articles &amp; Magazines
-      sublink: /print-media/
+      sublink: /shamayoga-in-the-media/print-media/
     - subname: Events
       sublink: /shamayoga-in-the-media/events/
     - subname: Yogaseer (Blog)
