--- a/_data/main-nav.yml
+++ b/_data/main-nav.yml
@@ -1,5 +1,27 @@
+---
 - name: Steve Avian
   link: /steve-avian/
+- name: Yoga Teacher Training Online
+  link: /teacher-training-online/
+- name: Yoga Teacher Training
+  link: /teacher-training/
+  submenu:
+    - subname: Course Content
+      sublink: /teacher-training/course-content/
+    - subname: Accredititation
+      sublink: /teacher-training/accredititation/
+    - subname: The Tutors
+      sublink: /teacher-training/the-tutors/
+    - subname: Prerequisites
+      sublink: /teacher-training/prerequisites/
+    - subname: Testimonials
+      sublink: /teacher-training/testimonials/
+    - subname: Venues
+      sublink: /teacher-training/venues/
+    - subname: Fees &amp; Application
+      sublink: /teacher-training/course-fees-and-application/
+    - xsubname: Course Application
+      xsublink: /teacher-training/course-application/
 - name: Yoga Teacher Training
   link: /teacher-training/
   submenu:
@@ -51,3 +73,4 @@
   link: /everything-yoga/yoga-shop/
 - name: Contact Shamayoga
   link: /contact-shamayoga/
+---
