Updated '_data/main-nav.yml' via CloudCannon

--- a/_data/main-nav.yml
+++ b/_data/main-nav.yml
@@ -1,7 +1,7 @@
 ---
 - name: Steve Avian
   link: /steve-avian/
-- name: Yoga Teacher Training Online
+- name: Online Teacher Training
   link: /teacher-training-online/
 - name: Yoga Teacher Training
   link: /teacher-training/
