Updated '_data/main-nav.yml' via CloudCannon

--- a/_data/main-nav.yml
+++ b/_data/main-nav.yml
@@ -52,4 +52,6 @@
   link: /everything-yoga/yoga-shop/
 - name: Contact Shamayoga
   link: /contact-shamayoga/
+- name: Online Yoga Teacher Training
+  link: /teacher-training-online/
 ---
